--- a/web/index.html
+++ b/web/index.html
@@ -36,24 +36,35 @@
 <div class="wrapper">
     <header>
         <div class="min-width">
-            <a class="logo">
-                <img src="img/logo.png" alt="Company logo"/>
-            </a>
-            <ul class="navigation">
-                <li id="main">Главная</li>
-                <li id="about-us">О нас </li>
-                <li id="services">Услуги</li>
-                <li id="contacts">Контакты</li>
-            </ul>
+            <a class="logo-small">
 
+            </a>
         </div>
+        <ul class="navigation">
+            <li><a href="">Услуги</a></li>
+            <li><a href="">Клиенты</a></li>
+            <li><a href="">О Компании</a></li>
+            <li><a href="">Оставить заявку</a></li>
+        </ul>
+
     </header>
 
     <div class="main">
-        <div class="slogan">
-            <div class = "min-width">
-                <h1>Web Craft - это новая эра веб-разработки!</h1>
+        <div class="main-screen">
+            <div class="bg-picture">
+
             </div>
+            <div class="min-width">
+                <a class="logo-big">
+
+                </a>
+            </div>
+            <a class="logo-big">
+
+            </a>
+        </div>
+        <div class="vertical-slider">
+
         </div>
     </div>
     <div class="min-width">
