--- a/web/index.html
+++ b/web/index.html
@@ -46,10 +46,9 @@
             <li><a href="">О Компании</a></li>
             <li><a href="">Оставить заявку</a></li>
         </ul>
-
     </header>
-
     <div class="main">
+        <i class="icon icon-resoft-logo"></i>
         <div class="main-screen">
             <div class="bg-picture">
 
