--- a/web/slider.html
+++ b/web/slider.html
@@ -39,13 +39,13 @@
     </div>
     <div class="company-info-slider-holder">
         <ul class="company-info-slider">
-            <li class="slide slide-0"></li>
-            <li class="slide slide-1"></li>
-            <li class="slide slide-2"></li>
-            <li class="slide slide-3"></li>
-            <li class="slide slide-4"></li>
-            <li class="slide slide-5"></li>
-            <li class="slide slide-6"></li>
+            <li class="slide slide-0"><h3>Step-0</h3></li>
+            <li class="slide slide-1"><h3>Step-1</h3></li>
+            <li class="slide slide-2"><h3>Step-2</h3></li>
+            <li class="slide slide-3"><h3>Step-3</h3></li>
+            <li class="slide slide-4"><h3>Step-4</h3></li>
+            <li class="slide slide-5"><h3>Step-5</h3></li>
+            <li class="slide slide-6"><h3>Step-6</h3></li>
         </ul>
     </div>
 </div>
