--- a/web/slider.html
+++ b/web/slider.html
@@ -35,7 +35,7 @@
 <!-- BEGIN wrapper-->
 <div class="wrapper">
     <div class="header-block">
-        <h1>This is header!</h1>
+        <h2>This is header!</h2>
     </div>
     <div class="company-info-slider-holder">
         <ul class="company-info-slider">
@@ -47,6 +47,9 @@
             <li class="slide slide-5"><h3>Step-5</h3></li>
             <li class="slide slide-6"><h3>Step-6</h3></li>
         </ul>
+    </div>
+    <div class="footer-block">
+        <h2>This is footer</h2>
     </div>
 </div>
 <!-- END wrapper-->
