--- a/web/slider.html
+++ b/web/slider.html
@@ -46,6 +46,8 @@
             <li class="slide slide-4"><h3>Step-4</h3></li>
             <li class="slide slide-5"><h3>Step-5</h3></li>
             <li class="slide slide-6"><h3>Step-6</h3></li>
+            <li class="slide slide-6"><h3>Step-7</h3></li>
+            <li class="slide slide-6"><h3>Step-8</h3></li>
         </ul>
     </div>
     <div class="footer-block">
