--- a/web/index.html
+++ b/web/index.html
@@ -34,154 +34,41 @@
 <body>
 <!-- BEGIN wrapper-->
 <div class="wrapper">
-    <header>
+    <div class="header">
         <div class="min-width">
-            <a class="logo-small">
-
-            </a>
+            <i class="icon icon-resoft-logo"></i>
+            <ul class="navigation">
+                <li><a href="">Контакты</a></li>
+                <li><a href="">Услуги</a></li>
+                <li><a href="">О Компании</a></li>
+            </ul>
         </div>
-        <ul class="navigation">
-            <li><a href="">Услуги</a></li>
-            <li><a href="">Клиенты</a></li>
-            <li><a href="">О Компании</a></li>
-            <li><a href="">Оставить заявку</a></li>
-        </ul>
-    </header>
+
+    </div>
     <div class="main">
-        <i class="icon icon-resoft-logo"></i>
-        <div class="main-screen">
+
             <div class="bg-picture">
+                <div class="min-width">
+                    <div class="logo">
+                        <a href="" class=" icon-logo-big">
+                             <span class="sign">
+                            ReSoft
+                        </span>
+
+                        </a>
+
+
+                    </div>
+
+                </div>
 
             </div>
-            <div class="min-width">
-                <a class="logo-big">
 
-                </a>
-            </div>
-            <a class="logo-big">
-
-            </a>
-        </div>
         <div class="vertical-slider">
 
         </div>
     </div>
-    <div class="min-width">
-        <div class="holder">
-            <div class="about-us">
-                <h2>О нас</h2>
-                <ol>
-                    <li>
-                        Мы молодая компания, занимающаяся новаторскими разработками в сфере веб технологий,
-                        главной нашей целью является довольный клиент.
-                    </li>
-                    <li>Компания основана в 2015 году, в состав компании входят только профессионалы
-                        обладающие высокими качествами, именно по этому мы можем гарантировать качество наших работ.
-                    </li>
-                    <li>
-                        Основные технологии с которыми мы работаем - это html, CSS, JS, AJAX или front end часть web приложения.
-                        Серверная часть или back-end у нас представлена небольшим количеством технологий - php, mysql.
-                    </li>
-                    <li>
-                        По окончанию разработки, мы с радостью поможем Вам дельным советом, как лучше продвигать свой сайт,
-                        как ним пользоваться, и заниматься его развитием.
-                    </li>
-                    <li>
-                        Наши работы строятся на анализе, это помогает нам в решение поставленых задач,
-                        так же мы подходим к каждому клиенту индивидуально и никаких шаблонов!
-                    </li>
-                </ol>
-            </div>
-            <div class="services">
-                <h2>Услуги</h2>
-                <ul class="services-list">
-                    <li>
-                        <h3>Landing Page</h3>
-                        <ul>
-                            <li>Уникальный дизайн сайта ( 1 длинная стр.)</li>
-                            <li>Система управления сайтом (CMS)</li>
-                            <li>Множество функциональных модулей</li>
-                            <li>Добавление сайта в Google, Яндекс</li>
-                            <li>Стоимость от 3000 грн</li>
-                        </ul>
-                    </li>
 
-                    <li>
-                        <h3>Сайт Визитка</h3>
-                        <ul>
-                            <li>Уникальный дизайн сайта ( 2-4 стр.)</li>
-                            <li>Система управления сайтом (CMS)</li>
-                            <li>Добавление сайта в Google, Яндекс</li>
-                            <li>Базовое наполнение сайта</li>
-                            <li>Стоимость от 4000 грн</li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <h3>Корпоративный Сайт</h3>
-                        <ul>
-                            <li>Уникальный дизайн сайта ( 4-5 стр.)</li>
-                            <li>Система управления сайтом (CMS)</li>
-                            <li>Обучение работы с сайтом</li>
-                            <li>Базовое наполнение сайта</li>
-                            <li>Стоимость от 6000 грн</li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <h3>Уникальный Сайт</h3>
-                        <ul>
-                            <li>Уникальный дизайн сайта ( 7 стр.)</li>
-                            <li>Множество функциональных модулей</li>
-                            <li>Система управления сайтом (CMS)</li>
-                            <li>Стандартное наполнение сайта</li>
-                            <li>Добавление сайта в Google, Яндекс</li>
-                            <li>Обучение работы с сайтом</li>
-                            <li>Стоимость от 16000 грн</li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <h3>Сайт Каталог</h3>
-                        <ul>
-                            <li>Уникальный дизайн сайта ( ? стр.)</li>
-                            <li>Множество функциональных модулей</li>
-                            <li>Система управления сайтом (CMS)</li>
-                            <li>Добавление сайта в Google, Яндекс</li>
-                            <li>Обучение работы с сайтом</li>
-                            <li>Стоимость от 12000 грн</li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <h3>Промо Сайт</h3>
-                        <ul>
-                            <li>Уникальный дизайн сайта ( 1 стандартная стр.)</li>
-                            <li>Добавление сайта в Google, Яндекс</li>
-                            <li>Базовое наполнение сайта</li>
-                            <li>Помощь в продвижении</li>
-                            <li>Обучение работы с сайтом</li>
-                            <li>Стоимость от 2000 грн</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="contacts">
-                <h2>Контакты </h2>
-                <ul>
-                    <li><i class="icon tell"></i>+38 (068) 788-86-612</li>
-                    <li><i class="icon email"></i>Julfy07@gmail.com</li>
-                    <li><i class="icon skype"></i>Julfy2</li>
-                </ul>
-                <footer>
-                    <div class="copyright">
-                        <span> ©2015 САЙТ ВЕБ РАЗРАБОТКИ<br/> ВСЕ ПРАВА ПРИНАДЛЕЖАТ ВЛАДЕЛЬЦАМ ПРОЕКТА.</span>
-                    </div>
-                </footer>
-            </div>
-        </div>
-    </div><!--end holder-->
 </div>
 <!-- END wrapper-->
 
