--- a/web/index.html
+++ b/web/index.html
@@ -34,9 +34,9 @@
 <body>
 <!-- BEGIN wrapper-->
 <div class="wrapper">
-    <div class="header">
+    <div class="header-block">
         <div class="min-width">
-            <i class="icon icon-resoft-logo"></i>
+            <div class="icon icon-resoft-logo"></div>
             <ul class="navigation">
                 <li><a href="">Контакты</a></li>
                 <li><a href="">Услуги</a></li>
@@ -64,7 +64,19 @@
 
             </div>
 
-        <div class="vertical-slider">
+        <div class="company-info-slider-holder">
+            <ul class="company-info-slider">
+                <li class="slide slide-0"><h3>Step-0</h3></li>
+                <li class="slide slide-1"><h3>Step-1</h3></li>
+                <li class="slide slide-2"><h3>Step-2</h3></li>
+                <li class="slide slide-3"><h3>Step-3</h3></li>
+                <li class="slide slide-4"><h3>Step-4</h3></li>
+                <li class="slide slide-5"><h3>Step-5</h3></li>
+                <li class="slide slide-6"><h3>Step-6</h3></li>
+
+            </ul>
+        </div>
+        <div class="footer-block">
 
         </div>
     </div>
