--- a/web/index.html
+++ b/web/index.html
@@ -108,9 +108,24 @@
                         <i class="slides-icons icon-slide-4 right"></i>
                     </div>
                 </li>
-                <li class="slide slide-5"><h3>Step-5</h3></li>
-                <li class="slide slide-6"><h3>Step-6</h3></li>
-                <li class="slide slide-7"><h3>Step-7</h3></li>
+                <li class="slide slide-5">
+                    <div class="content">
+                        <p>CОГЛАСУЕМ СТОИМОСТЬ РАБОТ<br/>И ДОЖДЕМСЯ ПРЕДОПЛАТЫ</p>
+                        <i class="slides-icons icon-slide-5"></i>
+                    </div>
+                </li>
+                <li class="slide slide-6">
+                    <div class="content">
+                        <p>УТВЕРДИМ ЭСКИЗ</p>
+                        <i class="slides-icons icon-slide-6"></i>
+                    </div>
+                </li>
+                <li class="slide slide-7">
+                    <div class="content">
+                        <p>СДАДИМ РАБОТУ В СРОК</p>
+                        <i class="slides-icons icon-slide-7"></i>
+                    </div>
+                </li>
                 <li class="slide slide-8"><h3>Step-8</h3></li>
 
 
