--- a/web/index.html
+++ b/web/index.html
@@ -36,11 +36,11 @@
 <div class="wrapper">
     <div class="header-block">
         <div class="min-width">
-            <div class="icon icon-resoft-logo"></div>
+            <a href=""><i class="icon icon-resoft-logo"></i></a>
             <ul class="navigation">
-                <li><a href="#contacts">Контакты</a></li>
-                <li><a href="#services">Услуги</a></li>
-                <li><a href="#about-us">О Компании</a></li>
+                <li><a href="#" data-scroll-to-slide="1" >Контакты</a></li>
+                <li><a href="#" data-scroll-to-slide="9" >Услуги</a></li>
+                <li><a href="#" data-scroll-to-slide="2" >О Компании</a></li>
             </ul>
         </div>
 
@@ -50,18 +50,14 @@
             <div class="bg-picture">
                 <div class="min-width">
                     <div class="logo">
-                        <a href="" class=" icon-logo-big">
-                             <span class="sign">
+                        <a href="" class="icon-logo-big">
+                            <i class="icon-logo-big"></i>
+                            <span class="sign">
                             ReSoft
                         </span>
-
                         </a>
-
-
                     </div>
-
                 </div>
-
             </div>
 
         <div class="company-info-slider-holder">
@@ -130,7 +126,9 @@
                     <div class="content">
                         <ul class="services">
                             <li>
-                                <i class="icon-service create-design"></i>
+                                <div class="image-holder">
+                                    <i class="icon-service create-design"></i>
+                                </div>
                                 <h3>Создание дизайна</h3>
                                 <span class="text-services">
                                     Дизайн сайтов <br>
@@ -141,7 +139,9 @@
 
                             </li>
                             <li>
-                                <i class="icon-service technical-support"></i>
+                                <div class="image-holder">
+                                    <i class="icon-service technical-support"></i>
+                                </div>
                                 <h3>Техническая поддержка</h3>
                                 <span class="text-services">
                                     Регистрация домена <br>
@@ -151,7 +151,9 @@
                                 </span>
                             </li>
                             <li>
-                                <i class="icon-service create-web"></i>
+                                <div class="image-holder">
+                                    <i class="icon-service create-web"></i>
+                                </div>
                                 <h3>Создание сайтов</h3>
                                 <span class="text-services">
                                     Сайты для малого бизнеса <br>
@@ -159,16 +161,10 @@
                                     Создание порталов <br>
                                     Landing page<br>
                                 </span>
-
                             </li>
-
                         </ul>
-
                     </div>
-
                 </li>
-
-
             </ul>
         </div>
 
