--- a/web/index.html
+++ b/web/index.html
@@ -171,10 +171,14 @@
     </div>
     <div class="footer-block">
         <div class="min-width">
-            <i class="icon-skype"></i>
-            <i class="icon-twitter"></i>
-            <i class="icon-facebook"></i>
-            <i class="icon-instagram"></i>
+            <ul>
+                <li class="icon-social skype"></li>
+                <li class="icon-social twitter"></li>
+                <!--<li class="icon-social facebook"></li>-->
+                <!--<li class="icon-social instagram"></li>-->
+
+            </ul>
+
         </div>
 
     </div>
