fix footer jump

--- a/web/index.html
+++ b/web/index.html
@@ -172,9 +172,9 @@
     <div class="footer-block">
         <div class="min-width">
             <ul>
-                <li class="icon-social skype"></li>
-                <li class="icon-social twitter"></li>
-                <!--<li class="icon-social facebook"></li>-->
+                <a href="skype:julfy2"><li class="icon-social skype" ></li></a>
+                <a href="https://twitter.com/Revolution_Soft"><li class="icon-social twitter"></li></a>
+                <a href="https://www.facebook.com/profile.php?id=100010075234079"><li class="icon-social facebook"></li></a>
                 <!--<li class="icon-social instagram"></li>-->
 
             </ul>
